# audit-insight

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audit_insight/: __init__.py  __main__.py  clustering.py  config.py  pipeline.py  preprocessing.py  sentiment.py  topics.py  utils.py
audit_insight/app/: __init__.py  launcher.py  streamlit_app.py
data/: sample_docs.csv  sample_run_doc.csv
docs/: architecture.md  installation.md  overview.md  sample_results.md  troubleshooting.md
tests/: __init__.py  test_clustering.py  test_preprocessing.py  test_sentiment.py  test_topics.py  test_utils.py
